# SFML

./: .gitignore
sfml-project/: CMakeLists.txt  Makefile  README.md
sfml-project/assets/: textures
sfml-project/src/: main.cpp
sfml-project/src/headers/: CatchTheFruit.h  FloatAndPlaceGame.h  Game.h  GameFactory.h  JumpingAnimal.h  MenuButton.h  SnakeGame.h
sfml-project/src/sources/: CatchTheFruit.cpp  FloatAndPlaceGame.cpp  GameFactory.cpp  JumpingAnimal.cpp  MenuButton.cpp  SnakeGame.cpp
